monaco/src/main/antlr/.antlr/hclParser.java
// Generated from c:\Users\nolwe\Documents\Stage\monaco\src\main\antlr\hcl.g4 by ANTLR 4.8
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class hclParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, BOOLEANOP=38, 
		BOOLEAN=39, TYPE=40, IDENTIFIER=41, STRING=42, NUMBER=43, COMMENT=44, 
		LINE_COMMENT=45, HAS_COMMENT=46, WS=47, UNRECOGNIZED=48;
	public static final int
		RULE_file = 0, RULE_directive = 1, RULE_moduleDirective = 2, RULE_providerDirective = 3, 
		RULE_terraformDirective = 4, RULE_terraformBlock = 5, RULE_terraformCloud = 6, 
		RULE_terraformBackEnd = 7, RULE_terraformVersion = 8, RULE_terraformProviders = 9, 
		RULE_resourceDirective = 10, RULE_variableDirective = 11, RULE_variableBlock = 12, 
		RULE_outputDirective = 13, RULE_name = 14, RULE_resourceType = 15, RULE_outputBlock = 16, 
		RULE_outputValue = 17, RULE_outputDescription = 18, RULE_outputDependsOn = 19, 
		RULE_outputSensitive = 20, RULE_variableSensitive = 21, RULE_variableType = 22, 
		RULE_variableNullabl = 23, RULE_type = 24, RULE_object = 25, RULE_field = 26, 
		RULE_complexField = 27, RULE_variableDescription = 28, RULE_variableDefault = 29, 
		RULE_variableValidation = 30, RULE_validation = 31, RULE_condition = 32, 
		RULE_expression = 33, RULE_functionCall = 34, RULE_complexExpression = 35, 
		RULE_array = 36, RULE_index = 37;
	private static String[] makeRuleNames() {
		return new String[] {
			"file", "directive", "moduleDirective", "providerDirective", "terraformDirective", 
			"terraformBlock", "terraformCloud", "terraformBackEnd", "terraformVersion", 
			"terraformProviders", "resourceDirective", "variableDirective", "variableBlock", 
			"outputDirective", "name", "resourceType", "outputBlock", "outputValue", 
			"outputDescription", "outputDependsOn", "outputSensitive", "variableSensitive", 
			"variableType", "variableNullabl", "type", "object", "field", "complexField", 
			"variableDescription", "variableDefault", "variableValidation", "validation", 
			"condition", "expression", "functionCall", "complexExpression", "array", 
			"index"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'module'", "'provider'", "'terraform'", "'{'", "'}'", "'cloud'", 
			"'backend'", "'required_version'", "'='", "'required_providers'", "'resource'", 
			"'variable'", "'output'", "'value'", "'description'", "'depends_on'", 
			"'sensitive'", "'type'", "'nullable'", "'list'", "'list('", "')'", "'map('", 
			"'object'", "'('", "'default'", "'validation'", "'condition'", "'error_message'", 
			"','", "'.'", "'['", "']'", "'<<EOF'", "'-'", "'EOF'", "'*'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, "BOOLEANOP", "BOOLEAN", "TYPE", "IDENTIFIER", "STRING", "NUMBER", 
			"COMMENT", "LINE_COMMENT", "HAS_COMMENT", "WS", "UNRECOGNIZED"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "hcl.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public hclParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class FileContext extends ParserRuleContext {
		public List<DirectiveContext> directive() {
			return getRuleContexts(DirectiveContext.class);
		}
		public DirectiveContext directive(int i) {
			return getRuleContext(DirectiveContext.class,i);
		}
		public FileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_file; }
	}

	public final FileContext file() throws RecognitionException {
		FileContext _localctx = new FileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_file);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(77); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(76);
				directive();
				}
				}
				setState(79); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__1) | (1L << T__2) | (1L << T__10) | (1L << T__11) | (1L << T__12))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DirectiveContext extends ParserRuleContext {
		public ProviderDirectiveContext providerDirective() {
			return getRuleContext(ProviderDirectiveContext.class,0);
		}
		public TerraformDirectiveContext terraformDirective() {
			return getRuleContext(TerraformDirectiveContext.class,0);
		}
		public ResourceDirectiveContext resourceDirective() {
			return getRuleContext(ResourceDirectiveContext.class,0);
		}
		public VariableDirectiveContext variableDirective() {
			return getRuleContext(VariableDirectiveContext.class,0);
		}
		public OutputDirectiveContext outputDirective() {
			return getRuleContext(OutputDirectiveContext.class,0);
		}
		public ModuleDirectiveContext moduleDirective() {
			return getRuleContext(ModuleDirectiveContext.class,0);
		}
		public DirectiveContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_directive; }
	}

	public final DirectiveContext directive() throws RecognitionException {
		DirectiveContext _localctx = new DirectiveContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_directive);
		try {
			setState(87);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__1:
				enterOuterAlt(_localctx, 1);
				{
				setState(81);
				providerDirective();
				}
				break;
			case T__2:
				enterOuterAlt(_localctx, 2);
				{
				setState(82);
				terraformDirective();
				}
				break;
			case T__10:
				enterOuterAlt(_localctx, 3);
				{
				setState(83);
				resourceDirective();
				}
				break;
			case T__11:
				enterOuterAlt(_localctx, 4);
				{
				setState(84);
				variableDirective();
				}
				break;
			case T__12:
				enterOuterAlt(_localctx, 5);
				{
				setState(85);
				outputDirective();
				}
				break;
			case T__0:
				enterOuterAlt(_localctx, 6);
				{
				setState(86);
				moduleDirective();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ModuleDirectiveContext extends ParserRuleContext {
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public ObjectContext object() {
			return getRuleContext(ObjectContext.class,0);
		}
		public ModuleDirectiveContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_moduleDirective; }
	}

	public final ModuleDirectiveContext moduleDirective() throws RecognitionException {
		ModuleDirectiveContext _localctx = new ModuleDirectiveContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_moduleDirective);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(89);
			match(T__0);
			setState(90);
			name();
			setState(91);
			object();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProviderDirectiveContext extends ParserRuleContext {
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public ObjectContext object() {
			return getRuleContext(ObjectContext.class,0);
		}
		public ProviderDirectiveContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_providerDirective; }
	}

	public final ProviderDirectiveContext providerDirective() throws RecognitionException {
		ProviderDirectiveContext _localctx = new ProviderDirectiveContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_providerDirective);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93);
			match(T__1);
			setState(94);
			name();
			setState(95);
			object();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TerraformDirectiveContext extends ParserRuleContext {
		public TerraformBlockContext terraformBlock() {
			return getRuleContext(TerraformBlockContext.class,0);
		}
		public TerraformDirectiveContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_terraformDirective; }
	}

	public final TerraformDirectiveContext terraformDirective() throws RecognitionException {
		TerraformDirectiveContext _localctx = new TerraformDirectiveContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_terraformDirective);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(97);
			match(T__2);
			setState(98);
			terraformBlock();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TerraformBlockContext extends ParserRuleContext {
		public List<TerraformCloudContext> terraformCloud() {
			return getRuleContexts(TerraformCloudContext.class);
		}
		public TerraformCloudContext terraformCloud(int i) {
			return getRuleContext(TerraformCloudContext.class,i);
		}
		public List<TerraformBackEndContext> terraformBackEnd() {
			return getRuleContexts(TerraformBackEndContext.class);
		}
		public TerraformBackEndContext terraformBackEnd(int i) {
			return getRuleContext(TerraformBackEndContext.class,i);
		}
		public List<TerraformVersionContext> terraformVersion() {
			return getRuleContexts(TerraformVersionContext.class);
		}
		public TerraformVersionContext terraformVersion(int i) {
			return getRuleContext(TerraformVersionContext.class,i);
		}
		public List<TerraformProvidersContext> terraformProviders() {
			return getRuleContexts(TerraformProvidersContext.class);
		}
		public TerraformProvidersContext terraformProviders(int i) {
			return getRuleContext(TerraformProvidersContext.class,i);
		}
		public List<ObjectContext> object() {
			return getRuleContexts(ObjectContext.class);
		}
		public ObjectContext object(int i) {
			return getRuleContext(ObjectContext.class,i);
		}
		public TerraformBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_terraformBlock; }
	}

	public final TerraformBlockContext terraformBlock() throws RecognitionException {
		TerraformBlockContext _localctx = new TerraformBlockContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_terraformBlock);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			match(T__3);
			setState(106); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(106);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case T__5:
					{
					setState(101);
					terraformCloud();
					}
					break;
				case T__6:
					{
					setState(102);
					terraformBackEnd();
					}
					break;
				case T__7:
					{
					setState(103);
					terraformVersion();
					}
					break;
				case T__9:
					{
					setState(104);
					terraformProviders();
					}
					break;
				case T__3:
					{
					setState(105);
					object();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(108); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__3) | (1L << T__5) | (1L << T__6) | (1L << T__7) | (1L << T__9))) != 0) );
			setState(110);
			match(T__4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TerraformCloudContext extends ParserRuleContext {
		public ObjectContext object() {
			return getRuleContext(ObjectContext.class,0);
		}
		public TerraformCloudContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_terraformCloud; }
	}

	public final TerraformCloudContext terraformCloud() throws RecognitionException {
		TerraformCloudContext _localctx = new TerraformCloudContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_terraformCloud);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(112);
			match(T__5);
			setState(113);
			object();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TerraformBackEndContext extends ParserRuleContext {
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public ObjectContext object() {
			return getRuleContext(ObjectContext.class,0);
		}
		public TerraformBackEndContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_terraformBackEnd; }
	}

	public final TerraformBackEndContext terraformBackEnd() throws RecognitionException {
		TerraformBackEndContext _localctx = new TerraformBackEndContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_terraformBackEnd);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115);
			match(T__6);
			setState(116);
			name();
			setState(117);
			object();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TerraformVersionContext extends ParserRuleContext {
		public TerminalNode STRING() { return getToken(hclParser.STRING, 0); }
		public TerraformVersionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_terraformVersion; }
	}

	public final TerraformVersionContext terraformVersion() throws RecognitionException {
		TerraformVersionContext _localctx = new TerraformVersionContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_terraformVersion);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(119);
			match(T__7);
			setState(120);
			match(T__8);
			setState(121);
			match(STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TerraformProvidersContext extends ParserRuleContext {
		public ObjectContext object() {
			return getRuleContext(ObjectContext.class,0);
		}
		public TerraformProvidersContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_terraformProviders; }
	}

	public final TerraformProvidersContext terraformProviders() throws RecognitionException {
		TerraformProvidersContext _localctx = new TerraformProvidersContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_terraformProviders);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(123);
			match(T__9);
			setState(124);
			object();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ResourceDirectiveContext extends ParserRuleContext {
		public ResourceTypeContext resourceType() {
			return getRuleContext(ResourceTypeContext.class,0);
		}
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public ObjectContext object() {
			return getRuleContext(ObjectContext.class,0);
		}
		public ResourceDirectiveContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_resourceDirective; }
	}

	public final ResourceDirectiveContext resourceDirective() throws RecognitionException {
		ResourceDirectiveContext _localctx = new ResourceDirectiveContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_resourceDirective);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(126);
			match(T__10);
			setState(127);
			resourceType();
			setState(128);
			name();
			setState(129);
			object();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariableDirectiveContext extends ParserRuleContext {
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public VariableBlockContext variableBlock() {
			return getRuleContext(VariableBlockContext.class,0);
		}
		public VariableDirectiveContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variableDirective; }
	}

	public final VariableDirectiveContext variableDirective() throws RecognitionException {
		VariableDirectiveContext _localctx = new VariableDirectiveContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_variableDirective);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(131);
			match(T__11);
			setState(132);
			name();
			setState(133);
			variableBlock();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariableBlockContext extends ParserRuleContext {
		public List<VariableTypeContext> variableType() {
			return getRuleContexts(VariableTypeContext.class);
		}
		public VariableTypeContext variableType(int i) {
			return getRuleContext(VariableTypeContext.class,i);
		}
		public List<VariableDescriptionContext> variableDescription() {
			return getRuleContexts(VariableDescriptionContext.class);
		}
		public VariableDescriptionContext variableDescription(int i) {
			return getRuleContext(VariableDescriptionContext.class,i);
		}
		public List<VariableDefaultContext> variableDefault() {
			return getRuleContexts(VariableDefaultContext.class);
		}
		public VariableDefaultContext variableDefault(int i) {
			return getRuleContext(VariableDefaultContext.class,i);
		}
		public List<VariableValidationContext> variableValidation() {
			return getRuleContexts(VariableValidationContext.class);
		}
		public VariableValidationContext variableValidation(int i) {
			return getRuleContext(VariableValidationContext.class,i);
		}
		public List<VariableSensitiveContext> variableSensitive() {
			return getRuleContexts(VariableSensitiveContext.class);
		}
		public VariableSensitiveContext variableSensitive(int i) {
			return getRuleContext(VariableSensitiveContext.class,i);
		}
		public List<VariableNullablContext> variableNullabl() {
			return getRuleContexts(VariableNullablContext.class);
		}
		public VariableNullablContext variableNullabl(int i) {
			return getRuleContext(VariableNullablContext.class,i);
		}
		public List<ObjectContext> object() {
			return getRuleContexts(ObjectContext.class);
		}
		public ObjectContext object(int i) {
			return getRuleContext(ObjectContext.class,i);
		}
		public VariableBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variableBlock; }
	}

	public final VariableBlockContext variableBlock() throws RecognitionException {
		VariableBlockContext _localctx = new VariableBlockContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_variableBlock);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(135);
			match(T__3);
			setState(143); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(143);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case T__17:
					{
					setState(136);
					variableType();
					}
					break;
				case T__14:
					{
					setState(137);
					variableDescription();
					}
					break;
				case T__25:
					{
					setState(138);
					variableDefault();
					}
					break;
				case T__26:
					{
					setState(139);
					variableValidation();
					}
					break;
				case T__16:
					{
					setState(140);
					variableSensitive();
					}
					break;
				case T__18:
					{
					setState(141);
					variableNullabl();
					}
					break;
				case T__3:
					{
					setState(142);
					object();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(145); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__3) | (1L << T__14) | (1L << T__16) | (1L << T__17) | (1L << T__18) | (1L << T__25) | (1L << T__26))) != 0) );
			setState(147);
			match(T__4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OutputDirectiveContext extends ParserRuleContext {
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public OutputBlockContext outputBlock() {
			return getRuleContext(OutputBlockContext.class,0);
		}
		public OutputDirectiveContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_outputDirective; }
	}

	public final OutputDirectiveContext outputDirective() throws RecognitionException {
		OutputDirectiveContext _localctx = new OutputDirectiveContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_outputDirective);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(149);
			match(T__12);
			setState(150);
			name();
			setState(151);
			outputBlock();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NameContext extends ParserRuleContext {
		public TerminalNode STRING() { return getToken(hclParser.STRING, 0); }
		public NameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_name; }
	}

	public final NameContext name() throws RecognitionException {
		NameContext _localctx = new NameContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_name);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(153);
			match(STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ResourceTypeContext extends ParserRuleContext {
		public TerminalNode STRING() { return getToken(hclParser.STRING, 0); }
		public ResourceTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_resourceType; }
	}

	public final ResourceTypeContext resourceType() throws RecognitionException {
		ResourceTypeContext _localctx = new ResourceTypeContext(_ctx, getState());
		enterRule(_localctx, 30, RULE_resourceType);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(155);
			match(STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OutputBlockContext extends ParserRuleContext {
		public List<OutputValueContext> outputValue() {
			return getRuleContexts(OutputValueContext.class);
		}
		public OutputValueContext outputValue(int i) {
			return getRuleContext(OutputValueContext.class,i);
		}
		public List<OutputDescriptionContext> outputDescription() {
			return getRuleContexts(OutputDescriptionContext.class);
		}
		public OutputDescriptionContext outputDescription(int i) {
			return getRuleContext(OutputDescriptionContext.class,i);
		}
		public List<OutputSensitiveContext> outputSensitive() {
			return getRuleContexts(OutputSensitiveContext.class);
		}
		public OutputSensitiveContext outputSensitive(int i) {
			return getRuleContext(OutputSensitiveContext.class,i);
		}
		public List<OutputDependsOnContext> outputDependsOn() {
			return getRuleContexts(OutputDependsOnContext.class);
		}
		public OutputDependsOnContext outputDependsOn(int i) {
			return getRuleContext(OutputDependsOnContext.class,i);
		}
		public List<ObjectContext> object() {
			return getRuleContexts(ObjectContext.class);
		}
		public ObjectContext object(int i) {
			return getRuleContext(ObjectContext.class,i);
		}
		public OutputBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_outputBlock; }
	}

	public final OutputBlockContext outputBlock() throws RecognitionException {
		OutputBlockContext _localctx = new OutputBlockContext(_ctx, getState());
		enterRule(_localctx, 32, RULE_outputBlock);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(157);
			match(T__3);
			setState(163); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(163);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case T__13:
					{
					setState(158);
					outputValue();
					}
					break;
				case T__14:
					{
					setState(159);
					outputDescription();
					}
					break;
				case T__16:
					{
					setState(160);
					outputSensitive();
					}
					break;
				case T__15:
					{
					setState(161);
					outputDependsOn();
					}
					break;
				case T__3:
					{
					setState(162);
					object();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(165); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__3) | (1L << T__13) | (1L << T__14) | (1L << T__15) | (1L << T__16))) != 0) );
			setState(167);
			match(T__4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OutputValueContext extends ParserRuleContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public OutputValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_outputValue; }
	}

	public final OutputValueContext outputValue() throws RecognitionException {
		OutputValueContext _localctx = new OutputValueContext(_ctx, getState());
		enterRule(_localctx, 34, RULE_outputValue);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(169);
			match(T__13);
			setState(170);
			match(T__8);
			setState(171);
			expression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OutputDescriptionContext extends ParserRuleContext {
		public TerminalNode STRING() { return getToken(hclParser.STRING, 0); }
		public OutputDescriptionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_outputDescription; }
	}
